# byacc-snapshots

./: CHANGES  MANIFEST  README.DOS  VERSION  aclocal.m4  btyaccpar.c  btyaccpar.skel  closure.c  configure  configure.in  defs.h  error.c  graph.c  lalr.c  lr0.c  main.c  makefile.in  mkdirs.sh  mkpar.c  mstring.c  output.c  reader.c  skel2c  skeleton.c  symtab.c  verbose.c  warshall.c  yacc.1  yaccpar.c  yaccpar.skel  yaccpar.skel.old
package/: byacc.spec  mingw-byacc.spec
package/debian/: changelog  control  copyright  postinst  prerm  rules
package/detest/: changelog  copyright  rules  watch
package/pkgsrc/: Makefile  distinfo
test/: btyacc_calc1.y  btyacc_demo.y  calc.tab.c  calc1.tab.c  calc1.tab.h  calc1.y  calc2.tab.c  calc2.y  calc3.tab.c  calc3.y  code_calc.code.c  code_error.code.c  err_syntax10.tab.c  err_syntax11.tab.c  err_syntax20.tab.c  err_syntax27.y  err_syntax4.tab.c  error.tab.c  expr.oxout.y  ftp.tab.c  ftp.y  grammar.tab.c  grammar.y  ok_syntax1.y  pure_calc.tab.c  pure_error.tab.c  run_lint.sh  run_make.sh  run_test.sh  varsyntax_calc1.y
test/btyacc/: btyacc_calc1.tab.c  btyacc_demo.tab.c  btyacc_destroy1.tab.c  btyacc_destroy2.tab.c  btyacc_destroy3.tab.c  calc.tab.c  calc1.tab.c  calc2.tab.c  calc3.tab.c  calc_code_all.tab.c  calc_code_default.tab.c  calc_code_imports.tab.c  calc_code_provides.tab.c  calc_code_requires.tab.c  calc_code_top.tab.c  code_calc.code.c  code_calc.tab.c  code_debug.c  code_error.code.c  code_error.tab.c  defines1.calc.c  defines2.calc.c  defines3.calc.c  empty.tab.c  err_inherit3.tab.c  err_inherit4.tab.c  (+29 more)
(+61 files in other folders)
