dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.5 2007/05/09 22:29:15 tom Exp $
AC_PREREQ(2.13.20020210)
AC_REVISION($Revision: 1.5 $)
AC_INIT(main.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE([AC_CANONICAL_SYSTEM])

AC_ARG_PROGRAM
AC_PROG_CC
AC_CONST
AC_PROG_MAKE_SET
AC_PROG_INSTALL

CF_ANSI_CC_REQD

CF_WITH_WARNINGS
CF_DISABLE_ECHO
CF_PROG_EXT
CF_DISABLE_LEAKS

###	output makefile
AC_OUTPUT(makefile,,,cat)
